--- a/package.json
+++ b/package.json
@@ -9,32 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
+    "base64-js": "^1.5.1",
     "expo": "~49.0.15",
     "expo-auth-session": "~5.0.2",
     "expo-google-sign-in": "^11.0.0",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-app-auth": "^7.1.0",
+    "react-native-base64": "^0.2.1",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-reanimated": "^3.6.0",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "~0.19.6",
+    "undefined": "\\"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.7",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.1.3"
   },
   "private": true
